--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "chai": "^5.1.1",
+    "chai-http": "^5.0.0",
+    "expect": "^29.7.0",
+    "express": "^4.19.2",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.0",
+    "supertest": "^7.0.0"
   }
 }
